# picograd

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: benchmark.yml  test.yml
book/: README.md  book.toml
book/book/: 1.html  2.html  3.html  404.html  after.html  ap.html  bib.html  dedi.html  front.html  index.html  pref.html  print.html  searchindex.js  toc.html  toc.js
book/book/theme/css/: custom.css
book/src/: 1.md  2.md  3.md  SUMMARY.md  ack.md  after.md  ap.md  bib.md  dedi.md  front.md  pref.md
book/theme/css/: custom.css
examples/: 1_elements.py  3_autodiff.py  4_knowledge.py  README.md  abstractions.py  ch1.py  ch2.py  demo.py  prices.py  pyproject.toml
kernels/gpu/: gemm.hip
native/: Cargo.toml
native/src/: eagker.rs  eval.rs  lib.rs  run.rs  ten.rs
native/src/eng/: evaluator.rs  mod.rs
native/src/engine/: evaluator.rs
python/picograd/: __init__.py  device.py  dispatcher.py  dtype.py  engine.py  helpers.py  mixins.py  nn.py  op.py  ten.py  tensor.py  uop.py
python/picograd/engine/: __init__.py  compiler.py  dslir.py  evaluator.py  interpreter.py  ir.py  irparser.py  op.py  opcode.py  opnode.py
python/picograd/engine/compiler/: compiler.py  opnode.py
python/picograd/engine/eagker/cuda/: gemm1_naive.cu
python/picograd/engine/kernels/cuda/: add.cu
python/picograd/frontend/: tensor.py
python/picograd/nn/: layers.py
python/picograd/runtime/: __init__.py  cl.py  cpu.py  cuda.py  cuda_runtime.py  device.py  hip.py  hip_runtime.py  host_runtime.py
python/picograd/sugar/: nn.py  tensor.py
python/picograd/tests/: test_correct.py
python/teenygrad/: __init__.py
python/teenygrad/compiler/: compiler.py
python/teenygrad/engine/compiler/: compiler.py  opnode.py
python/teenygrad/engine/eagker/: interpreter.py
python/teenygrad/frontend/: nn.py  tensor.py
python/teenygrad/runtime/: device.py  host_runtime.py
python/tests/: test_tensor.py
rust/: Cargo.toml  Dockerfile  build.rs  dcr.sh  dex.sh
rust/benches/: bench_cpu.rs
rust/device_kernels/: Cargo.toml
rust/kernels/: Cargo.toml
rust/kernels/src/: lib.rs
rust/src/: cpu.rs  lib.rs  main.rs  tensor.rs
src/: engine.rs  lib.rs  main.py  main.rs  nn.rs  optim.rs  pyten.rs  rsten.rs  uop.rs
src/eagker/: cpu.rs
src/graph/: mod.rs  realizer.rs  scheduler.rs
src/numpy/: mod.rs  nn.rs  pyten.rs  rsten.rs
src/runtime/: mod.rs
src/tensor/: mod.rs  rsten.rs
tests/: 1_fnn.ipynb  3_wavenet.ipynb  ngram.ipynb  nn.ipynb
