[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "picograd"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "maturin>=1.9.5",
]
[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "native/Cargo.toml"

[tool.uv.workspace]
members = [
    "examples",
]

[dependency-groups]
dev = [
    "numpy>=1.24.4",
    "tinygrad>=0.9.2",
    "torch>=2.5.1",
]
