[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "picograd"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "gpuctypes>=0.3.0",
    "helion>=0.1.8",
    "hip-python~=7.0.2",
    "maturin>=1.9.5",
    "pyopencl>=2025.2.6",
    "triton>=3.4.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "rust/Cargo.toml"
python-source = "python"
python-packages = ["picograd"]
module-name = "picograd._pgrs"

[tool.uv.workspace]
members = [
    "examples",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://test.pypi.org/simple"

[dependency-groups]
dev = [
    "numpy>=1.24.4",
    "tinygrad>=0.9.2",
    "torch>=2.5.1",
]
