[package]
name = "picograd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "picograd"
crate-type = ["cdylib"] # necessary to produce a shared lib for python to import from

[dependencies]
opencl3 = "0.12.1"
pyo3 = "0.25.0"
